<?xml version="1.0" encoding="utf-8"?><!--
FrameLayout is used as top level layout because when the CardView is getting
animated, it needs to stay centered. Otherwise we need to animate x and y values
too. layout_gravity="center_horizontal" is a lot simpler.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foregroundGravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/list_item_bg_collapsed"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        tools:layout_marginLeft="20dp"
        tools:layout_marginRight="20dp">

        <FrameLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--
            scale_container is used to scale down the item when the scale down
            animation happens. card_container re-sizes height and width while
            scale_container scales the inside views to make it look natural
            -->

            <RelativeLayout
                android:id="@+id/scale_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/list_item_horizontal_padding"
                android:paddingTop="@dimen/list_item_vertical_padding"
                android:paddingRight="@dimen/list_item_horizontal_padding"
                android:paddingBottom="@dimen/list_item_vertical_padding"
                android:transformPivotX="0dp">

                <ImageView
                    android:id="@+id/chevron"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/title"
                    android:layout_alignParentStart="true"

                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="11dp"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/ic_chevron_right" />

                <LinearLayout
                    android:id="@+id/newbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/chevron"

                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-2dp"
                    android:layout_marginEnd="11dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:srcCompat="@android:drawable/btn_star">

                    <ImageView
                        android:id="@+id/imagenew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"


                        app:srcCompat="@android:drawable/btn_star" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/new_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_toStartOf="@+id/newbtn"
                    android:layout_toEndOf="@id/chevron"
            />


                <TextView
                    android:id="@+id/wage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title"


                    android:layout_toStartOf="@+id/newbtn"
                    android:layout_toEndOf="@id/chevron"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/wage"
                    android:layout_marginTop="6dp"
                    android:layout_toStartOf="@+id/newbtn"
                    android:layout_toEndOf="@id/chevron"
                    android:text="TextView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expand_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/position"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:visibility="gone" />


            </RelativeLayout>

            <View
                android:id="@+id/list_item_fg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:background="@color/list_item_fg"
                android:visibility="gone"
                tools:visibility="gone" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>